<resources>
    <string name="app_name">Navigation dan API</string>
    <string name="searchMenu">Search menu</string>
    <string name="name">Name</string>
    <string name="username">userame</string>
    <string name="Follower">Follower</string>
    <string name="Following">Following</string>
    <string name="Follower_count">1</string>
    <string name="Following_count">2</string>
    <string name="search_hint">Search User Name</string>
</resources>